# strategy-gpt

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  code_executor.py  evaluator.py  executor.py  ideator.py  main.py  mkdocs.yml  planner.py  pyproject.toml  requirements-docs.txt  strategy.py
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
crates/: Cargo.toml
crates/build-pipeline/: Cargo.toml  whitelist.toml
crates/build-pipeline/src/: artifact_cache.rs  driver.rs  error.rs  lib.rs  linter.rs  migration.rs  params.rs  whitelist.rs
crates/build-pipeline/tests/: integration_params_schema.rs
crates/data-gateway/: Cargo.toml
crates/data-gateway/src/: bar.rs  cache.rs  consolidator.rs  divergence.rs  error.rs  gateway.rs  lib.rs  manifest.rs  normalizer.rs  provider.rs
crates/data-gateway/src/providers/: csv.rs  mod.rs  yfinance.rs
crates/data-gateway/tests/: gateway_smoke.rs
crates/engine/: Cargo.toml
crates/engine-rt/: Cargo.toml  PROMPT_API.md
crates/engine-rt/src/: bar.rs  context.rs  decision.rs  error.rs  indicator.rs  lib.rs  order.rs  params.rs  plugin.rs  sealed.rs  signal.rs  state.rs  strategy.rs  version.rs
crates/engine/src/: coordinator.rs  equity_recorder.rs  executor.rs  fill_model.rs  intent.rs  lib.rs  logging.rs  metrics.rs  modes.rs  plugin.rs  position_book.rs  progress.rs  regime.rs  result.rs  runtime.rs  sanity.rs  spec.rs  trade_log.rs  wire.rs
crates/engine/src/indicators/: atr.rs  ema.rs  mod.rs  realized_vol.rs  rsi.rs  sma.rs
crates/engine/tests/: coordinator.rs  end_to_end.rs  plugin_factory.rs  plugin_load.rs
crates/example-strategy/: Cargo.toml  params_schema.json
crates/example-strategy/src/: lib.rs
crates/experiment-spec/: schema.json
crates/kb/: Cargo.toml
crates/kb/src/: chunk.rs  client.rs  embed.rs  error.rs  extract.rs  graph.rs  ingest.rs  lib.rs  retrieve.rs  schema.rs  schema.sql  source.rs  store.rs  vector.rs
crates/kb/tests/: retrieval.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: error.rs  ledger.rs  lib.rs  queries.rs  records.rs  schema.rs  sidecar.rs
crates/ledger/tests/: ledger_smoke.rs
crates/objectives/: Cargo.toml
crates/objectives/src/: evaluator.rs  lib.rs  metric_name.rs  spec.rs  validation.rs
crates/objectives/tests/: objectives.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: build_mod.rs  engine_mod.rs  gateway.rs  kb_mod.rs  ledger_mod.rs  lib.rs  objectives_mod.rs
crates/vxx-strategy/: Cargo.toml  intent.toml  objective.yaml  params_schema.json  smoke.toml
crates/vxx-strategy/src/: lib.rs
dev/: 404.html  index.html  sitemap.xml
dev/decisions/: index.html
dev/explanation/: index.html
dev/for-engineers/: index.html
dev/for-quants/: index.html
dev/guided-cli-walkthrough/: index.html
dev/how-to/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: batch-spec.md  cli-cookbook.md  experiment-spec.md  guided-cli-walkthrough.md  index.md  optimization.md
docs/_includes/: cli-cross-cutting.md  cli-env-keys.md  cli-progress.md  cli-roots.md
docs/decisions/: 0000-adr-template.md  0001-rust-execution-layer.md  0002-python-orchestration.md  0003-pyo3-trusted-crate-boundary.md  0004-engine-worker-subprocess-arrow-ipc.md  0005-worker-process-isolation-no-sandbox.md  0006-sealed-strategy-trait.md  0007-sqlite-parquet-ledger.md  0008-hybrid-graph-vector-kb.md  0009-year-segmented-content-addressed-cache.md  0010-abort-on-failure-batch-semantics.md  0011-pbo-threshold-default-0_5.md  0012-oos-aggregator-mean-only.md  0013-rust-toolchain-pin-1-82.md  0014-lint-stance.md  0015-docs-platform-mkdocs-mike-pages.md  (+6 more)
kb/: sources.toml
python/: README.md  pyproject.toml
python/strategy_gpt/: __init__.py  _native_shim.py  author.py  author_decisions.py  author_events.py  author_ui.py  benchmark.py  build_pipeline.py  cheap_critique.py  cli.py  diagnose.py  engine.py  experiment_spec.py  folds.py  gateway.py  hypothesis_loop.py  hypothesize.py  hypothesize_wiring.py  kb.py  kb_query.py  ledger.py  logging_config.py  markdown_io.py  mechanical_gate.py  nodes.py  objectives.py  optimization_ledger.py  optimization_progress.py  optimization_runner.py  optimizer.py  parallelism.py  per_strategy_ledger.py  prompts.py  prompts_author.py  rationale.py  reasoning.py  reasoning_clients.py  reject_taxonomy.py  repair.py  smoke.py  (+5 more)
python/strategy_gpt/progress/: __init__.py  bridge.py  bus.py  context.py  events.py
python/strategy_gpt/progress/sinks/: __init__.py  base.py  jsonl.py  plain.py  resolver.py  rich_live.py
python/strategy_gpt/search/: __init__.py  base.py  bayesian.py  cma_es.py  differential_evolution.py  grid.py  lhs_polish.py  one_shot.py  random_search.py  recursive_grid.py  sobol.py  successive_halving.py
python/strategy_gpt/selection/: __init__.py  cscv.py  dsr.py  normal.py  selector.py  sensitivity.py
python/tests/: test_attempt_with_optimize.py  test_author.py  test_author_decisions.py  test_author_dialog_compaction.py  test_author_events.py  test_author_multiline_input.py  test_author_repair_exhaustion.py  test_author_ui.py  test_benchmark.py  test_benchmark_advisories.py  test_cheap_critique.py  test_cli.py  test_cli_author.py  test_cli_hypothesize_end_to_end.py  test_cma_es_searcher.py  test_de_searcher.py  test_diagnose.py  test_engine.py  test_experiment_spec.py  test_folds.py  test_hypothesis_loop.py  test_hypothesize_deferred.py  test_hypothesize_wiring.py  test_kb_filter.py  test_kb_native.py  test_kb_query.py  test_lhs_polish.py  test_logging_config.py  test_manifest_determinism.py  test_markdown_io.py  test_mechanical_gate.py  test_native_shim.py  test_nodes.py  test_optimization_ledger.py  test_optimization_progress.py  test_optimization_runner.py  test_optimizer.py  test_parallelism.py  test_per_strategy_ledger.py  test_progress_bridge.py  (+22 more)
python/tests/selection/: test_cscv.py  test_dsr.py  test_reselect.py  test_runner_integration.py  test_selector.py  test_sensitivity.py
utils/: data.py  logger.py  openai_client.py
(+201 files in other folders)
