[tool.poetry]
name = "strategy-gpt"
version = "0.1.0"
description = ""
authors = ["Alpha <alphagma@gmail.com>"]
readme = "README.md"
packages = [{include = "strategy_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.5"
numpy = "^1.24.3"
pandas = "^2.0.1"
yfinance = "^0.2.18"
pyarrow = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
