[workspace]
resolver = "2"
members = ["*"]
exclude = ["experiment-spec", ".pytest_cache", "target"]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Alpha <jraimondi@makingsense.com>"]

[workspace.dependencies]
arrow = { version = "53", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
ndarray = "0.16"
polars = { version = "0.44", default-features = false, features = ["lazy", "parquet", "ipc"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }
indexmap = "=2.7.0"
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "=1.5.5"
rand = "0.8"
rand_chacha = "0.3"
libloading = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
