[package]
name = "data-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-provider market data fetching, cache, normalization, consolidation."

[dependencies]
engine-rt = { path = "../engine-rt" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
blake3.workspace = true

# Bar blobs are JSON in v1 (same swap-stable approach as the ledger sidecars).
# Parquet upgrade is task 5.4 follow-up; re-add polars with parquet feature
# (default-features = false) when swapping.

[lib]
path = "src/lib.rs"

[dev-dependencies]
# Pin tempfile to the last release that uses fastrand 2.x with getrandom 0.2 —
# newer versions pull getrandom 0.4 which requires the unstable
# edition2024 cargo feature on Rust 1.82.
tempfile = "=3.10.1"
