[package]
name = "engine-rt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Strategy runtime: sealed Strategy trait, Context capability handle, indicator registry, runner version."

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
ndarray.workspace = true

[lib]
path = "src/lib.rs"
