[package]
name = "engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Backtest engine: BatchSpec, coordinator, worker model, stress and sensitivity modes."

[dependencies]
engine-rt = { path = "../engine-rt" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
rand.workspace = true
rand_chacha.workspace = true
blake3.workspace = true

# Re-add when implemented:
# arrow.workspace = true
# polars.workspace = true

[lib]
path = "src/lib.rs"
