[package]
name = "objectives"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Per-strategy declarative objective specifications, validation, and scoring."

[dependencies]
engine = { path = "../engine" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true

[lib]
path = "src/lib.rs"
