[package]
name = "vxx-strategy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Reference VXX volatility-range smoke strategy implemented against the new `Strategy` trait."

[lib]
name = "vxx_strategy"
crate-type = ["cdylib"]

[dependencies]
engine-rt = { path = "../engine-rt" }
serde = { workspace = true }
serde_json = { workspace = true }
